# dnd

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  index.html  input.css  package.json  tailwind.config.js
assets/: tailwind.css
assets/resources/items/weapons/: longsword.json  rapier.json
assets/styling/: tailwind.css
dnd-types/: Cargo.toml
dnd-types/src/: items.rs  lib.rs  stores.rs
dnd-types/src/items/: damage.rs  weapon.rs
dnd-types/src/items/weapon/: ranged.rs
dnd-ui/: Cargo.toml  Dioxus.toml
dnd-ui/src/: layouts.rs  main.rs  nav.rs  routes.rs
dnd-ui/src/routes/: home.rs  items.rs
dnd-ui/src/routes/items/: weapons.rs
macros/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
src/: app.rs  main.rs  nav.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: rapier.json
src-tauri/resources/items/weapons/: rapier.json
src-tauri/src/: commands.rs  dice.rs  items.rs  lib.rs  main.rs  paths.rs  stores.rs
src-tauri/src/items/: weapon.rs
src-tauri/src/types/: items.rs  stores.rs
src-tauri/src/types/items/: weapon.rs
src/app/: database.rs
src/types/: dice.rs  items.rs
src/types/items/: weapon.rs
types/: Cargo.toml
types/src/: aliased.rs  asi.rs  attributes.rs  background.rs  dice.rs  feat.rs  items.rs  lib.rs  race.rs  skill.rs  stat_block.rs  stores.rs
types/src/classes/: cantrip.rs  casting.rs  class.rs  feature.rs  mod.rs  proficiencies.rs  skills.rs  subclass.rs  table_entry.rs
types/src/common/: asi.rs  attributes.rs  condition.rs  damage.rs  dice.rs  mod.rs  size.rs  skill.rs
types/src/extensions/: ast_to_string.rs  force_lock.rs  is_false.rs  is_zero.rs  mod.rs  snake_case.rs  starts_with_vowel.rs
types/src/fs/: background.rs  constants.rs  deserializers.rs  mod.rs  parsers.rs  race.rs
types/src/fs/classes/: class.rs
types/src/fs/spells/: lists.rs  mod.rs  spells.rs
types/src/fs/weapons/: mod.rs  property.rs  weapon.rs
types/src/items/: damage.rs  properties.rs  weapon.rs
types/src/items/weapon/: melee.rs  ranged.rs
types/src/mechanics/: alignment.rs  asi.rs  attributes.rs  condition.rs  creature_type.rs  damage.rs  mod.rs  size.rs  skill.rs  table.rs
types/src/meta/: description.rs  link.rs  mod.rs  source.rs  table.rs
types/src/spells/: list.rs  mod.rs  spell.rs
types/src/stores/: hash_store.rs
types/src/traits/: linkable.rs  mod.rs
ui/: Cargo.toml
ui/assets/resources/feats/: actor.json
ui/assets/resources/stat_blocks/: construct_spirit.json
ui/assets/styling/: tailwind.css
ui/src/: layouts.rs  lib.rs  nav.rs  routes.rs
ui/src/components/: description.rs  edit.rs  info.rs  inputs.rs  mod.rs  nav.rs  view.rs
ui/src/components/edit/: background.rs  feat.rs  inputs.rs  race.rs  (+4 more)
ui/src/routes/: backgrounds.rs  classes.rs  home.rs  items.rs  races.rs  spell_lists.rs
(+155 files in other folders)
