[package]
name = "dnd-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"

# macros = { path = "./macros" }

[workspace]
# members = ["macros"]

[build]
rustflags = ["-Z", "threads=8"]
