[package]
name = "dnd"
version = "0.1.0"
authors = ["Miitto <wpbickerton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["server", "types", "ui"]

[workspace.dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
types = { path = "types" }
server = { path = "server" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.94"

[dependencies]
anyhow.workspace = true
dioxus.workspace = true
ui.path = "ui"
serde.workspace = true
serde_json.workspace = true

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
