[package]
authors = ["Miitto <wpbickerton@gmail.com>"]
edition = "2021"
name = "dnd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["server", "types", "ui"]

[workspace.dependencies]
anyhow = "1.0.95"
dioxus = { version = "0.6.1", features = ["fullstack", "router"] }
markdown = "1.0.0-alpha.21"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.134"
server = { path = "server" }
types = { path = "types" }

[dependencies]
anyhow.workspace = true
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.path = "ui"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
