[package]
name = "dnd-ui"
version = "0.1.0"
authors = ["Miitto <wpbickerton@gmail.com>"]
edition = "2021"
default-run = "dnd-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnd-types.workspace = true

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
